# moodownloader

./: README.md  pyproject.toml
moodownloader/: __init__.py  app.py  authenticator.py  downloader.py  navigator.py
moodownloader/authentication/: __init__.py
moodownloader/authentication/application/: authentication_service.py
moodownloader/authentication/domain/: authenticator.py  user.py
moodownloader/authentication/infrastructure/: moodle_authenticator.py
moodownloader/course_management/application/: download_course_service.py
moodownloader/course_management/domain/: course.py  course_manager.py  downloader.py  element.py  navigator.py
moodownloader/course_management/infrastructure/: dom_element.py  moodle_downloader.py  moodle_navigator.py  navigator.py  pdf_downloader.py
tests/: test_auth.py
