[tool.poetry]
name = "moodownloader"
version = "0.1.0"
description = ""
authors = ["José Andrés Trujillo <trujillohenaresj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pdfkit = "^1.0.0"
robobrowser = "^0.5.3"
werkzeug = "0.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
